--- a/mueblesdelosalpes/mueblesdelosalpes.interfaz/src/main/webapp/index.html
+++ b/mueblesdelosalpes/mueblesdelosalpes.interfaz/src/main/webapp/index.html
@@ -8,7 +8,7 @@
 </head>
 <body ng-controller="mainController">
 	<div class="container">
-		<!--Cabecera-->
+		<!--Cabecerajghjhg-->
 		<div class="jumbotron text-center">
 			<h1>Elementos Disponibles <span class="label label-info">{{ items.length }}</span></h1>
 		</div>
