--- a/mueblesdelosalpes.interfaz/src/main/webapp/index.html
+++ b/mueblesdelosalpes.interfaz/src/main/webapp/index.html
@@ -1,42 +1,3 @@
-<!doctype html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <style>
       html, body {
@@ -59,10 +20,10 @@
 Tranvia 
 <input type="text" name="nombreTranvia" id="nombreTranvia" >
 Emergencia
-<SELECT NAME="emergenciaTranvia" SIZE=1 onChange="javascript:alert('prueba');"> 
-<OPTION VALUE="link pagina 1">Choque</OPTION>
-<OPTION VALUE="link pagina 2">Temperatura</OPTION>
-<OPTION VALUE="link pagina 3">Panico</OPTION>
+<SELECT NAME="emergenciaTranvia" id="emergenciaTranvia" SIZE=1 onChange="javascript:alert('prueba');"> 
+<OPTION VALUE="1">Choque</OPTION>
+<OPTION VALUE="2">Temperatura</OPTION>
+<OPTION VALUE="3">Panico</OPTION>
 </SELECT>
 
 Valor
@@ -71,19 +32,7 @@ Valor
 <button name="cambiarEstadoTranvia" id="cambiarEstadoTranvia" onclick="cambiarEstadoTranvia();return false"> Cambiar estado de Tranvia</button>
 
     
-
-
-
-
-
-
-
-
-
-
-
-
-
+<button name="direccion" id="direccion" onclick="direccion(); return false;"> direccion </button>
 
  
     <div id="map" height="400"  ></div> 
