--- a/mueblesdelosalpes.interfaz/src/main/webapp/index.html
+++ b/mueblesdelosalpes.interfaz/src/main/webapp/index.html
@@ -32,7 +32,8 @@ Valor
 <button name="cambiarEstadoTranvia" id="cambiarEstadoTranvia" onclick="cambiarEstadoTranvia();return false"> Cambiar estado de Tranvia</button>
 
     
-<button name="direccion" id="direccion" onclick="direccion(); return false;"> direccion </button>
+<button name="direccion" id="direccion" onclick="verMobibuses(); return false;"> ver mobibuses </button>
+<button name="direccion" id="direccion" onclick="verMobibusesMasCercanoUsuario(); return false;"> mobibus mas cercano a mi </button>
 
  
     <div id="map" height="400"  ></div> 
